flux/apps/falinks/gateway-svcs/cilium-gateways/app/resources/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-internal
spec:
  controllerName: io.cilium/gateway-controller
  description: "The internal gateway. Isn't externally accessible."

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-issuer
spec:
  addresses:
  - type: IPAddress
    value: 192.168.69.67
  gatewayClassName: cilium-internal
  listeners:
  - name: web-gw
    port: 80
    protocol: HTTP
  - name: websecure-gw
    protocol: HTTPS
    port: 443
    hostname: "*.jsck.network"
    allowedRoutes:
      namespaces:
        from: "All"
    tls:
      mode: Terminate
      certificateRefs:
      - name: jsck-network-tls

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-internal-http-filter-redirect
spec:
  parentRefs:
  - name: cilium-internal
    sectionName: web-gw
  hostnames:
  - "*.jsck.network"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
